--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="save_workout_to_database">Save workout to database</string>
     <string name="update_workout_to_database">Update workout to database</string>
     <string name="hangboard_image">Hangboard image</string>
+    <string name="time_controls">Time Controls</string>
+    <string name="new_workout">New 5A workout</string>
+    <string name="start_workout">Start workout</string>
+    <string name="workout_history">Workout database</string>
+    <string name="repeaters">Repeaters</string>
+    <string name="finger_image">Finger image</string>
+    <string name="workout_duration">Duration: xxmin</string>
+
 
     <integer-array name="bm1000_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
