--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -875,7 +875,86 @@
         <item>80</item>
 
     </integer-array>
+    <integer-array name="concept_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item>
+        <item>20</item>
+        <item>13</item>
+        <item>257</item>
+        <item>13</item>
+        <item>2</item>
+        <item>70</item>
+        <item>8</item>
+        <item>206</item>
+        <item>8</item>
+        <item>3</item>
+        <item>117</item>
+        <item>13</item>
+        <item>159</item>
+        <item>13</item>
+        <item>4</item>
+        <item>22</item>
+        <item>48</item>
+        <item>255</item>
+        <item>48</item>
+        <item>5</item>
+        <item>72</item>
+        <item>37</item>
+        <item>204</item>
+        <item>37</item>
+        <item>6</item>
+        <item>118</item>
+        <item>45</item>
+        <item>158</item>
+        <item>45</item>
+        <item>7</item>
+        <item>-18</item>
+        <item>79</item>
+        <item>291</item>
+        <item>79</item>
+        <item>8</item>
+        <item>26</item>
+        <item>79</item>
+        <item>251</item>
+        <item>79</item>
+        <item>9</item>
+        <item>72</item>
+        <item>66</item>
+        <item>204</item>
+        <item>66</item>
+        <item>10</item>
+        <item>112</item>
+        <item>80</item>
+        <item>164</item>
+        <item>80</item>
+        <item>11</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>12</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>13</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>14</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>15</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
+        <item>1</item>
 
+    </integer-array>
     <!-- three items, four numbers in one grip balue -->
     <!-- first one is the hold number in hangboard picture -->
     <!-- second one is how hard it is hang in that hold given the grip type used-->
@@ -2581,6 +2660,151 @@
 
     </integer-array>
 
+    <integer-array name="grip_values_concept">
+    <item>1</item>
+    <item>100</item>
+    <item>10</item> <!-- griptype: four fingers-->
+
+    <item>2</item>
+    <item>23</item>
+    <item>10</item> <!-- griptype and single hold -->
+    <item>2</item>
+    <item>70</item>
+    <item>20</item> <!-- griptype and single hold -->
+    <item>2</item>
+    <item>75</item>
+    <item>30</item> <!-- griptype and single hold -->
+
+    <item>3</item>
+    <item>3</item>
+    <item>10</item> <!-- griptype and single hold -->
+    <item>3</item>
+    <item>12</item>
+    <item>20</item> <!-- griptype and single hold -->
+    <item>3</item>
+    <item>8</item>
+    <item>30</item> <!-- griptype and single hold -->
+
+    <item>4</item>
+    <item>4</item>
+    <item>21</item> <!-- griptype and single hold -->
+    <item>4</item>
+    <item>5</item>
+    <item>31</item>
+
+    <item>5</item>
+    <item>17</item>
+    <item>21</item> <!-- griptype and single hold -->
+    <item>5</item>
+    <item>19</item>
+    <item>31</item> <!-- griptype and single hold -->
+
+    <item>6</item>
+    <item>3</item>
+    <item>10</item> <!-- griptype and single hold -->
+    <item>6</item>
+    <item>9</item>
+    <item>20</item> <!-- griptype and single hold -->
+    <item>6</item>
+    <item>11</item>
+    <item>30</item> <!-- griptype and single hold -->
+
+    <item>7</item>
+    <item>139</item>
+    <item>70</item> <!-- index finger -->
+    <item>7</item>
+    <item>69</item>
+    <item>80</item> <!-- middlre finger -->
+    <item>7</item>
+    <item>150</item>
+    <item>90</item> <!-- ring finger -->
+    <item>7</item>
+    <item>195</item>
+    <item>100</item> <!-- pinky -->
+
+    <item>8</item>
+    <item>14</item>
+    <item>40</item> <!-- griptype and single hold -->
+    <item>8</item>
+    <item>9</item>
+    <item>50</item> <!-- griptype and single hold -->
+    <item>8</item>
+    <item>40</item>
+    <item>60</item> <!-- griptype and single hold -->
+
+    <item>9</item>
+    <item>25</item>
+    <item>40</item> <!-- griptype and single hold -->
+    <item>9</item>
+    <item>18</item>
+    <item>50</item> <!-- griptype and single hold -->
+    <item>9</item>
+    <item>69</item>
+    <item>60</item> <!-- griptype and single hold -->
+
+    <item>10</item>
+    <item>2</item>
+    <item>11</item> <!-- griptype and single hold -->
+    <item>10</item>
+    <item>4</item>
+    <item>21</item> <!-- three front -->
+    <item>10</item>
+    <item>5</item>
+    <item>31</item> <!-- three back -->
+
+    <item>11</item>
+    <item>14</item>
+    <item>10</item> <!-- griptype and single hold -->
+    <item>11</item>
+    <item>22</item>
+    <item>20</item> <!-- griptype and single hold -->
+    <item>11</item>
+    <item>25</item>
+    <item>30</item> <!-- griptype and single hold -->
+
+    <item>12</item>
+    <item>170</item>
+    <item>70</item> <!-- index finger -->
+    <item>12</item>
+    <item>125</item>
+    <item>80</item> <!-- middlre finger -->
+    <item>12</item>
+    <item>350</item>
+    <item>90</item> <!-- ring finger -->
+    <item>12</item>
+    <item>450</item>
+    <item>100</item>
+
+    <item>13</item>
+    <item>400</item>
+    <item>40</item> <!-- griptype and single hold -->
+    <item>13</item>
+    <item>350</item>
+    <item>50</item> <!-- griptype and single hold -->
+    <item>13</item>
+    <item>700</item>
+    <item>60</item> <!-- griptype and single hold -->
+
+    <item>14</item>
+    <item>500</item>
+    <item>40</item> <!-- griptype and single hold -->
+    <item>14</item>
+    <item>450</item>
+    <item>50</item> <!-- griptype and single hold -->
+    <item>14</item>
+    <item>800</item>
+    <item>60</item> <!-- griptype and single hold -->
+
+    <item>15</item>
+    <item>8</item>
+    <item>11</item> <!-- griptype and single hold -->
+    <item>15</item>
+    <item>13</item>
+    <item>21</item> <!-- griptype and single hold -->
+    <item>15</item>
+    <item>16</item>
+    <item>31</item> <!-- griptype and single hold -->
+    </integer-array>
 
     <string-array name="grades">
         <item>5A</item>
