--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     the others. For example increasing Intensity usually decreases Difficulty. However it is possible
     to steadily increase every variable over time if progression is achieved.</string>
 
+    <!-- Pretty sure coordinates are measured with Nexus_S_API_27 and x/y coordinates are divided by 1.5
+    then application scale those values to other devices. -->
     <integer-array name="bm1000_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
@@ -878,138 +880,82 @@
     <integer-array name="solution_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>2</item>
-        <item>70</item>
-        <item>8</item>
-        <item>206</item>
-        <item>8</item>
-        <item>3</item>
-        <item>117</item>
-        <item>13</item>
-        <item>159</item>
-        <item>13</item>
-        <item>4</item>
-        <item>22</item>
-        <item>48</item>
-        <item>255</item>
-        <item>48</item>
-        <item>5</item>
-        <item>72</item>
-        <item>37</item>
-        <item>204</item>
-        <item>37</item>
-        <item>6</item>
-        <item>118</item>
-        <item>45</item>
-        <item>158</item>
-        <item>45</item>
-        <item>7</item>
-        <item>-18</item>
-        <item>79</item>
-        <item>291</item>
-        <item>79</item>
-        <item>8</item>
-        <item>26</item>
-        <item>79</item>
-        <item>251</item>
-        <item>79</item>
-        <item>9</item>
-        <item>72</item>
-        <item>66</item>
-        <item>204</item>
-        <item>66</item>
-        <item>10</item>
-        <item>112</item>
-        <item>80</item>
-        <item>164</item>
-        <item>80</item>
-        <item>11</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>12</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>13</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>14</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>15</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
-        <item>1</item>
+        <item>1</item><item>21</item><item>0</item><item>269</item><item>0</item>
+        <item>2</item><item>71</item><item>3</item><item>222</item><item>3</item>
+        <item>3</item><item>125</item><item>7</item><item>170</item><item>7</item>
+        <item>4</item><item>17</item><item>37</item><item>185</item><item>39</item>
+        <item>5</item><item>39</item><item>37</item><item>260</item><item>39</item>
+        <item>6</item><item>76</item><item>35</item><item>226</item><item>36</item>
+        <item>7</item><item>119</item><item>38</item><item>283</item><item>39</item>
+        <item>8</item><item>152</item><item>35</item><item>152</item><item>35</item>
+        <item>9</item><item>16</item><item>72</item><item>196</item><item>71</item>
+        <item>10</item><item>60</item><item>72</item><item>239</item><item>71</item>
+        <item>11</item><item>106</item><item>72</item><item>281</item><item>71</item>
+        <item>12</item><item>25</item><item>109</item><item>202</item><item>107</item>
+        <item>13</item><item>62</item><item>109</item><item>239</item><item>107</item>
+        <item>14</item><item>100</item><item>109</item><item>272</item><item>106</item>
+        <item>15</item><item>153</item><item>109</item><item>153</item><item>109</item>
 
     </integer-array>
 
     <integer-array name="edge_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>2</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>3</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>4</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>5</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>6</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>7</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>8</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>9</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>10</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>11</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>12</item><item>0</item><item>0</item><item>0</item><item>0</item>
+        <item>1</item><item>0</item><item>11</item><item>176</item><item>11</item>
+        <item>2</item><item>51</item><item>11</item><item>227</item><item>11</item>
+        <item>3</item><item>101</item><item>11</item><item>281</item><item>11</item>
+        <item>4</item><item>0</item><item>44</item><item>176</item><item>44</item>
+        <item>5</item><item>51</item><item>44</item><item>227</item><item>44</item>
+        <item>6</item><item>101</item><item>44</item><item>281</item><item>44</item>
+        <item>7</item><item>0</item><item>76</item><item>176</item><item>76</item>
+        <item>8</item><item>51</item><item>76</item><item>227</item><item>76</item>
+        <item>9</item><item>101</item><item>76</item><item>281</item><item>76</item>
+        <item>10</item><item>0</item><item>109</item><item>176</item><item>109</item>
+        <item>11</item><item>51</item><item>109</item><item>227</item><item>109</item>
+        <item>12</item><item>101</item><item>109</item><item>281</item><item>109</item>
     </integer-array>
 
     <integer-array name="soillboost_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>2</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>3</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>4</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>5</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>6</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>7</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>8</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>9</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>10</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>11</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>12</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>13</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>14</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>15</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>16</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>17</item><item>0</item><item>0</item><item>0</item><item>0</item>
+        <item>1</item><item>10</item><item>0</item><item>273</item><item>0</item>
+        <item>2</item><item>56</item><item>0</item><item>227</item><item>0</item>
+        <item>3</item><item>110</item><item>0</item><item>175</item><item>0</item>
+        <item>4</item><item>13</item><item>31</item><item>273</item><item>31</item>
+        <item>5</item><item>57</item><item>31</item><item>226</item><item>31</item>
+        <item>6</item><item>108</item><item>31</item><item>176</item><item>31</item>
+        <item>7</item><item>13</item><item>60</item><item>269</item><item>60</item>
+        <item>8</item><item>49</item><item>60</item><item>235</item><item>60</item>
+        <item>9</item><item>91</item><item>60</item><item>194</item><item>60</item>
+        <item>10</item><item>139</item><item>60</item><item>139</item><item>60</item>
+        <item>11</item><item>11</item><item>89</item><item>273</item><item>89</item>
+        <item>12</item><item>61</item><item>89</item><item>226</item><item>89</item>
+        <item>13</item><item>98</item><item>89</item><item>188</item><item>89</item>
+        <item>14</item><item>145</item><item>89</item><item>145</item><item>89</item>
+        <item>15</item><item>5</item><item>116</item><item>280</item><item>116</item>
+        <item>16</item><item>58</item><item>117</item><item>222</item><item>117</item>
+        <item>17</item><item>111</item><item>118</item><item>173</item><item>118</item>
     </integer-array>
 
     <integer-array name="ultimate_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>2</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>3</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>4</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>5</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>6</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>7</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>8</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>9</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>10</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>11</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>12</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>13</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>14</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>15</item><item>0</item><item>0</item><item>0</item><item>0</item>
-        <item>16</item><item>0</item><item>0</item><item>0</item><item>0</item>
+        <item>1</item><item>0</item><item>8</item><item>281</item><item>8</item>
+        <item>2</item><item>55</item><item>0</item><item>228</item><item>0</item>
+        <item>3</item><item>101</item><item>14</item><item>180</item><item>14</item>
+        <item>4</item><item>39</item><item>41</item><item>250</item><item>41</item>
+        <item>5</item><item>141</item><item>45</item><item>141</item><item>45</item>
+        <item>6</item><item>40</item><item>59</item><item>249</item><item>59</item>
+        <item>7</item><item>141</item><item>68</item><item>141</item><item>68</item>
+        <item>8</item><item>50</item><item>73</item><item>239</item><item>73</item>
+        <item>9</item><item>141</item><item>91</item><item>141</item><item>91</item>
+        <item>10</item><item>64</item><item>85</item><item>223</item><item>85</item>
+        <item>11</item><item>141</item><item>114</item><item>141</item><item>114</item>
+        <item>12</item><item>68</item><item>96</item><item>219</item><item>96</item>
+        <item>13</item><item>7</item><item>114</item><item>273</item><item>114</item>
+        <item>14</item><item>39</item><item>114</item><item>242</item><item>114</item>
+        <item>15</item><item>69</item><item>114</item><item>212</item><item>114</item>
+        <item>16</item><item>94</item><item>114</item><item>187</item><item>114</item>
     </integer-array>
     <!-- three items, four numbers in one grip balue -->
     <!-- first one is the hold number in hangboard picture -->
