--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -897,7 +897,6 @@
         <item>15</item><item>153</item><item>109</item><item>153</item><item>109</item>
 
     </integer-array>
-
     <integer-array name="edge_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
@@ -914,7 +913,6 @@
         <item>11</item><item>51</item><item>109</item><item>227</item><item>109</item>
         <item>12</item><item>101</item><item>109</item><item>281</item><item>109</item>
     </integer-array>
-
     <integer-array name="soillboost_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
@@ -936,7 +934,6 @@
         <item>16</item><item>58</item><item>117</item><item>222</item><item>117</item>
         <item>17</item><item>111</item><item>118</item><item>173</item><item>118</item>
     </integer-array>
-
     <integer-array name="ultimate_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
@@ -957,7 +954,6 @@
         <item>15</item><item>69</item><item>114</item><item>212</item><item>114</item>
         <item>16</item><item>94</item><item>114</item><item>187</item><item>114</item>
     </integer-array>
-
     <integer-array name="grill_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
@@ -976,7 +972,6 @@
         <item>13</item><item>141</item><item>96</item><item>141</item><item>96</item>
 
     </integer-array>
-
     <integer-array name="grillto_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
@@ -993,6 +988,8 @@
         <item>11</item><item>141</item><item>91</item><item>141</item><item>91</item>
 
     </integer-array>
+
+
     <!-- three items, four numbers in one grip balue -->
     <!-- first one is the hold number in hangboard picture -->
     <!-- second one is how hard it is hang in that hold given the grip type used-->
@@ -1048,10 +1045,10 @@
         <item>13</item>
         <item>30</item> <!-- griptype and single hold -->
         <item>5</item>
-        <item>25</item>
+        <item>35</item>
         <item>40</item>
         <item>5</item>
-        <item>19</item>
+        <item>25</item>
         <item>50</item>
 
         <item>6</item>
@@ -2694,7 +2691,6 @@
         <item>30</item>
 
     </integer-array>
-
     <integer-array name="grip_values_solution">
     <item>1</item>
     <item>100</item>
@@ -2840,119 +2836,145 @@
     <item>16</item>
     <item>31</item> <!-- griptype and single hold -->
     </integer-array>
-
     <integer-array name="grip_values_edge">
         <item>1</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>30</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>1</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>45</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>1</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>51</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>2</item>
-        <item>0</item>
+        <item>18</item>
         <item>10</item> <!-- griptype and single hold -->
         <item>2</item>
-        <item>0</item>
+        <item>28</item>
         <item>20</item> <!-- griptype and single hold -->
         <item>2</item>
-        <item>0</item>
+        <item>32</item>
         <item>30</item> <!-- griptype and single hold -->
 
         <item>3</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>8</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>3</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>18</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>3</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>23</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>4</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>2</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>4</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>5</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>4</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>7</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
+        <item>4</item>  <!-- hold number -->
+        <item>23</item>  <!-- hold value -->
+        <item>40</item> <!-- griptype and single hold -->
+        <item>4</item>  <!-- hold number -->
+        <item>19</item>  <!-- hold value -->
+        <item>50</item> <!-- griptype and single hold -->
+        <item>4</item>  <!-- hold number -->
+        <item>29</item>  <!-- hold value -->
+        <item>60</item> <!-- griptype and single hold -->
 
         <item>5</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>8</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>5</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>11</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>6</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>13</item>  <!-- hold value -->
+        <item>30</item> <!-- griptype and single hold -->
+        <item>5</item>  <!-- hold number -->
+        <item>35</item>  <!-- hold value -->
+        <item>40</item> <!-- griptype and single hold -->
+        <item>5</item>  <!-- hold number -->
+        <item>28</item>  <!-- hold value -->
+        <item>50</item> <!-- griptype and single hold -->
+        <item>6</item>  <!-- hold number -->
+        <item>69</item>  <!-- hold value -->
+        <item>60</item> <!-- griptype and single hold -->
+
+        <item>6</item>  <!-- hold number -->
+        <item>10</item>  <!-- hold value -->
+        <item>10</item> <!-- griptype and single hold -->
+        <item>6</item>  <!-- hold number -->
+        <item>13</item>  <!-- hold value -->
+        <item>20</item> <!-- griptype and single hold -->
+        <item>6</item>  <!-- hold number -->
+        <item>15</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>7</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>11</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>7</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>14</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>7</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>16</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>8</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>13</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>8</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>16</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>8</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>18</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>9</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>15</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>9</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>17</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>9</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>20</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>10</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>19</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>10</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>24</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>10</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>27</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>11</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>22</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>11</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>28</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>11</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>30</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
 
         <item>12</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>35</item>  <!-- hold value -->
         <item>10</item> <!-- griptype and single hold -->
         <item>12</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>49</item>  <!-- hold value -->
         <item>20</item> <!-- griptype and single hold -->
         <item>12</item>  <!-- hold number -->
-        <item>0</item>  <!-- hold value -->
+        <item>59</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
     </integer-array>
-
     <integer-array name="grip_values_soillboost">
         <item>1</item>  <!-- hold number -->
         <item>0</item>  <!-- hold value -->
@@ -3127,7 +3149,6 @@
         <item>0</item>  <!-- hold value -->
         <item>30</item> <!-- griptype and single hold -->
     </integer-array>
-
     <integer-array name="grip_values_ultimate">
         <item>1</item>  <!-- hold number -->
         <item>0</item>  <!-- hold value -->
@@ -3294,7 +3315,6 @@
 
 
     </integer-array>
-
     <integer-array name="grip_values_grill">
         <item>1</item>  <!-- hold number -->
         <item>0</item>  <!-- hold value -->
@@ -3460,7 +3480,6 @@
         <item>100</item> <!-- griptype and single hold -->
 
     </integer-array>
-
     <integer-array name="grip_values_grillto">
         <item>1</item>  <!-- hold number -->
         <item>0</item>  <!-- hold value -->
