--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+    <string name="help">Help</string>
+    <string name="settings">Settings</string>
+    <string name="version">Version</string>
+    <string name="about">About</string>
     <string name="app_name">Grips and Grades</string>
     <string name="workout_description_hint">Optional short description about the workout</string>
     <string name="save_workout_to_database">Save workout to database</string>
