--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
+    <string name="logbook">Logbook</string>
     <string name="help">Help</string>
     <string name="settings">Settings</string>
-    <string name="version">Version</string>
+    <string name="benchmark">Benchmark</string>
     <string name="about">About</string>
     <string name="app_name">Grips and Grades</string>
     <string name="workout_description_hint">Optional short description about the workout</string>
@@ -37,6 +38,8 @@
     in workouts and one being the maximum. With this information we can observe how increasing one variable affects
     the others. For example increasing Intensity usually decreases Difficulty. However it is possible
     to steadily increase every variable over time if progression is achieved.</string>
+
+
 
     <!-- Pretty sure coordinates are measured with Nexus_S_API_27 and x/y coordinates are divided by 1.5
     then application scale those values to other devices. -->
